# MiniBitconPy

./: .env.example  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml
cli/: __init__.py  main.py
docker/: Dockerfile  docker-compose.yml  init-db.sql
mini_bitcoin_py/: __init__.py
mini_bitcoin_py/core/: __init__.py  block.py  consensus.py  encoding.py  hashing.py  keys.py  merkle.py  tx.py  utxo.py  validation.py
mini_bitcoin_py/node/: __init__.py  api.py  config.py  db.py  models.py  p2p.py  storage.py  sync.py
mini_bitcoin_py/node/migrations/: env.py
mini_bitcoin_py/node/migrations/versions/: 001_initial.py
mini_pow_chain/: __init__.py
mini_pow_chain/core/: __init__.py  block.py  consensus.py  keys.py  merkle.py  tx.py  utxo.py  validation.py
mini_pow_chain/node/: __init__.py  api.py  config.py  db.py  p2p.py  storage.py  sync.py
mini_pow_chain/node/migrations/: env.py
tests/: __init__.py  test_hashing.py  test_pow_and_block_validation.py  test_tx_sign_verify.py  test_utxo_rules.py
